# strixpro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cli/: main.py
core/: __init__.py  config.py  fingerprint.py  js_analyzer.py  plugin_system.py  report.py  scanner.py  waf_bypass.py
deploy/: Dockerfile  docker-compose.yml  oneclick_deploy.sh
docs/: README.md
plugins/: example_plugin.py
pro/: __init__.py  ai_engine.py  api_scanner.py  license.py
scripts/: publish_pypi.sh
web/: app.py  email.py  payment.py  users.py
web/templates/: admin.html  base.html  dashboard.html  fingerprints.html  js_analyzer.html  login.html  pricing.html  profile.html  register.html  scan.html  waf.html
