[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "strixpro"
version = "1.0.0"
description = "StrixPro - AI驱动的自动化安全测试平台"
readme = "docs/README.md"
authors = [
    {name = "StrixPro Team", email = "team@strixpro.dev"},
]
license = {text = "AGPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
keywords = ["security", "pentest", "waf-bypass", "js-analyzer", "fingerprint"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.urls]
"Homepage" = "https://github.com/strixpro/strixpro"
"Documentation" = "https://strixpro.dev"
"Bug Tracker" = "https://github.com/strixpro/strixpro/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]
full = [
    "curl-cffi>=0.6",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[project.scripts]
strixpro = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["core*", "pro*", "web*", "cli*", "plugins*"]
